docs/apache-airflow-providers-amazon/7.0.0/_sources/_api/airflow/providers/amazon/aws/links/emr/index.rst.txt
:py:mod:`airflow.providers.amazon.aws.links.emr`
================================================

.. py:module:: airflow.providers.amazon.aws.links.emr


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.amazon.aws.links.emr.EmrClusterLink
   airflow.providers.amazon.aws.links.emr.EmrLogsLink




.. py:class:: EmrClusterLink

   Bases: :py:obj:`airflow.providers.amazon.aws.links.base_aws.BaseAwsLink`

   Helper class for constructing AWS EMR Cluster Link

   .. py:attribute:: name
      :annotation: = EMR Cluster

      

   .. py:attribute:: key
      :annotation: = emr_cluster

      

   .. py:attribute:: format_str
      

      


.. py:class:: EmrLogsLink

   Bases: :py:obj:`airflow.providers.amazon.aws.links.base_aws.BaseAwsLink`

   Helper class for constructing AWS EMR Logs Link

   .. py:attribute:: name
      :annotation: = EMR Cluster Logs

      

   .. py:attribute:: key
      :annotation: = emr_logs

      

   .. py:attribute:: format_str
      

      


