docs/apache-airflow-providers-amazon/8.1.0/_sources/_api/airflow/providers/amazon/aws/links/emr/index.rst.txt
:py:mod:`airflow.providers.amazon.aws.links.emr`
================================================

.. py:module:: airflow.providers.amazon.aws.links.emr


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.amazon.aws.links.emr.EmrClusterLink
   airflow.providers.amazon.aws.links.emr.EmrLogsLink



Functions
~~~~~~~~~

.. autoapisummary::

   airflow.providers.amazon.aws.links.emr.get_log_uri



.. py:class:: EmrClusterLink

   Bases: :py:obj:`airflow.providers.amazon.aws.links.base_aws.BaseAwsLink`

   Helper class for constructing AWS EMR Cluster Link

   .. py:attribute:: name
      :value: 'EMR Cluster'

      

   .. py:attribute:: key
      :value: 'emr_cluster'

      

   .. py:attribute:: format_str

      


.. py:class:: EmrLogsLink

   Bases: :py:obj:`airflow.providers.amazon.aws.links.base_aws.BaseAwsLink`

   Helper class for constructing AWS EMR Logs Link

   .. py:attribute:: name
      :value: 'EMR Cluster Logs'

      

   .. py:attribute:: key
      :value: 'emr_logs'

      

   .. py:attribute:: format_str

      


.. py:function:: get_log_uri(*, cluster = None, emr_client = None, job_flow_id = None)

   Retrieves the S3 URI to the EMR Job logs.  Requires either the output of a
   describe_cluster call or both an EMR Client and a job_flow_id to look it up.


